--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="ntp-avatar" src="img/NickAvatar.png">
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
@@ -15,7 +15,39 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        
+      <header>
+        <nav class="navbar-navmain"></nav>
+          <div class="logo1">
+            <img src="img/Logo1.png" class="imglogo1resp"></img>
+          </div>
+          <div class="socialiconsH">
+            <ul class="si1">
+              <li class="FB1">
+                <a class="#">
+                <i class="fb1"><img src="img/facebook29.png"></img></i>
+                </a>
+              </li>
+                <li class="TW1">
+                  <a class="#">
+                    <i class="tw1"><img src="img/twitter1.png"></img></i></a>
+              </li>
+            </ul>
+            <H3 class ="name">Nick Pope</h3>
+              <ul class="si2">
+              <li class="g+">
+                <a class="#">
+                  <i class="G+"><img src="img/google-plus.png"></img></i></a>
+                </li>
+                <li class="LI">
+                  <a class="#">
+                    <i class="li"><img src="img/linkedin12.png"></img></i></a>
+                  </li>
+            </ul>
+          </div>
+        </header>
+        </head>
+
+
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
