--- a/index.html
+++ b/index.html
@@ -22,26 +22,11 @@
           </div>
           <div class="socialiconsH">
             <ul class="si1">
-              <li class="FB1">
-                <a class="#">
-                <i class="fb1"><img src="img/facebook29.png"></img></i>
-                </a>
-              </li>
-                <li class="TW1">
-                  <a class="#">
-                    <i class="tw1"><img src="img/twitter1.png"></img></i></a>
-              </li>
-            </ul>
-            <H3 class ="name">Nick Pope</h3>
-              <ul class="si2">
-              <li class="g+">
-                <a class="#">
-                  <i class="G+"><img src="img/google-plus.png"></img></i></a>
-                </li>
-                <li class="LI">
-                  <a class="#">
-                    <i class="li"><img src="img/linkedin12.png"></img></i></a>
-                  </li>
+          <li><img src="img/facebook29.png"></img></li>
+          <li><img src="img/twitter1.png"></img></li>
+          <li><h3 class="name">Nick Pope</h3></li>
+          <li><img src="img/google-plus.png"></img></li>
+          <li><img src="img/linkedin12.png"></img></li>
             </ul>
           </div>
         </header>
