need assit. w/ spacing

--- a/index.html
+++ b/index.html
@@ -15,23 +15,35 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
+      <main class="blog">
       <header>
         <nav class="navbar-navmain"></nav>
           <div class="logo1">
             <img src="img/Logo1.png" class="imglogo1resp"></img>
           </div>
+        </header>
           <div class="socialiconsH">
             <ul class="si1">
-          <li><img src="img/facebook29.png"></img></li>
-          <li><img src="img/twitter1.png"></img></li>
+          <li><a><img src="img/facebook29.png"></img></a></li>
+          <li><a><img src="img/twitter1.png"></img></a></li>
           <li><h3 class="name">Nick Pope</h3></li>
-          <li><img src="img/google-plus.png"></img></li>
-          <li><img src="img/linkedin12.png"></img></li>
+          <li><a><img src="img/google-plus.png"></img></a></li>
+          <li><a><img src="img/linkedin12.png"></img></a></li>
             </ul>
           </div>
-        </header>
-        </head>
-
+          <div class="bio">
+            <ul>
+            <li><img src="img/NickAvatar.png"></img></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="codemonkey">
+          <ul>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </main>
 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
