--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
           <div class="socialiconsH">
             <ul class="si1">
-          <li><a href="https://www.facebook.com/nicholas.pope.524"><img src="img/facebook29.png"></img></a></li>
+          <li><a href="https://www.facebook.com/nicholas.pope.524"><img src="img/facebook29.png" class="sizE"></img></a></li>
           <li><a href="https://twitter.com/pope410211"><img src="img/twitter1.png"></img></a></li>
           <li><h3 class="name">Nick Pope</h3></li>
           <li><a href="https://plus.google.com/113920606278670725370/about/p/pub"><img src="img/google-plus.png"></img></a></li>
