--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
+      <a href="#" class="scrollup">^</a>
       <main class="blog">
       <header>
         <nav class="navbar-navmain"></nav>
