--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
       <main class="blog">
       <header>
-        <nav class="navbar-navmain"></nav>
+        <nav class="navbar-navmain" >
           <div class="logo1">
             <img src="img/Logo1.png" class="imglogo1resp"></img>
           </div>
@@ -30,6 +30,7 @@
           <li class="sizE"><a href="https://plus.google.com/113920606278670725370/about/p/pub"><img src="img/google-plus.png"></img></a></li>
           <li class="sizE"><a href="https://www.linkedin.com/in/pope410211"><img src="img/linkedin12.png"></img></a></li>
             </ul>
+          </nav>
             <a href="#" class="scrollup">&#8963;</a>
           </div>
           <div class="bio">
