added some lines & title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+---
+title: It on Like Donkey Kong
+---
 <!doctype html>
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>{{page.title}}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -54,7 +57,8 @@
         </div>
         <div class="codemonkey">
           <ul>
-            <li>{% for post in site.posts %}
+            <li>PLACEHOLDER
+              {% for post in site.posts %}
           <a href="{{post.url}}">{{post.title}}</a>
             { % endfor %}</li>
             <li></li>
