--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@ title: It on Like Donkey Kong
         </div>
         <div class="codemonkey">
           <ul>
-            <li>PLACEHOLDER
               {% for post in site.posts %}
-          <a href="{{post.url}}">{{post.title}}</a>
-            { % endfor %}</li>
+          <li><a href="{{post.url}}">{{post.title}}</a></li>
+            { % endfor %}
             <li></li>
           </ul>
         </div>
