updated src dir

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@ title: It on Like Donkey Kong
 
         <link rel="ntp-avatar" src="img/NickAvatar.png">
         <!-- Place favicon.ico in the root directory -->
+        <!-- bower:css -->
+        <link rel="stylesheet" href="../bower_components/normalize.css/normalize.css" />
+        <!-- endbower -->
 
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
       <main class="blog">
@@ -67,7 +68,10 @@ title: It on Like Donkey Kong
 
       </main>
 
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+        <!-- bower:js -->
+        <script src="../bower_components/jQuery/dist/jquery.js"></script>
+        <!-- endbower -->
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
