some grid processed

--- a/index.html
+++ b/index.html
@@ -62,18 +62,19 @@ title: It on Like Donkey Kong
         </nav>  -->
 
         <nav class="navbar-navmain" >
-          <section class="grid">
-          <div class="logo1">
-            <img src="img/Logo1.png" class="imglogo1resp offset-2"></img>
+          <section class="grid logo1">
+          <div class="offset-2">
+            <img src="img/Logo1.png" class="imglogo1resp"></img>
           </div>
         </section>
         </header>
-        <section class="grid">
-          <div class="socialiconsH unit-span-2">
+        <section class="grid socialiconsH">
+          <div class="unit-span-2">
             <ul class="si1">
           <li class="sizE"><a href="https://www.facebook.com/nicholas.pope.524"><img src="img/facebook29.png"></img></a></li>
           <li class="sizE"><a href="https://twitter.com/pope410211"><img src="img/twitter1.png"></img></a></li>
           </ul>
+        </div>
           <div class="unit-span-4"><h3 class="name">Nick Pope</h3></div>
           <div class="unit-span-2">
             <ul class="si1">
@@ -81,7 +82,6 @@ title: It on Like Donkey Kong
           <li class="sizE"><a href="https://www.linkedin.com/in/pope410211"><img src="img/linkedin12.png"></img></a></li>
         </ul>
       </div>
-    </div>
     </section>
 
           </nav>
