--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: It on Like Donkey Kong
     <body>
       <main class="container">
 
-        <section class="grid">
+        <!-- <section class="grid">
         <div class="unit-span-1">1</div>
         <div class="unit-span-1">2</div>
         <div class="unit-span-1">3</div>
@@ -30,7 +30,7 @@ title: It on Like Donkey Kong
         <div class="unit-span-1">6</div>
         <div class="unit-span-1">7</div>
         <div class="unit-span-1">8</div>
-      </section> <!-- Grid -->
+      </section> 
       <section class="grid">
         <div class="unit-span-2">col-2</div>
         <div class="unit-span-4">col-4</div>
@@ -38,8 +38,7 @@ title: It on Like Donkey Kong
       </section>
       <section class="grid">
         <div class="unit-span-4 offset-2">Offset-4</div>
-      </section>
-
+      </section> -->
 
 
 
@@ -61,14 +60,14 @@ title: It on Like Donkey Kong
           </div>
         </nav>  -->
 
-        <nav class="navbar-navmain" >
+        <nav class="navbar-navmain color1" >
           <section class="grid logo1">
-          <div class="offset-2">
-            <img src="img/Logo1.png" class="imglogo1resp"></img>
+          <div>
+            <a class="imglogo1resp"><img src="img/Logo1.png"></img></a>
           </div>
         </section>
         </header>
-        <section class="grid socialiconsH">
+        <section class="grid socialiconsH color1">
           <div class="unit-span-2">
             <ul class="si1">
           <li class="sizE"><a href="https://www.facebook.com/nicholas.pope.524"><img src="img/facebook29.png"></img></a></li>
