--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: It on Like Donkey Kong
+title: It's on Like Donkey Kong
 ---
 <!doctype html>
 <html class="no-js" lang="">
@@ -30,7 +30,7 @@ title: It on Like Donkey Kong
         <div class="unit-span-1">6</div>
         <div class="unit-span-1">7</div>
         <div class="unit-span-1">8</div>
-      </section> 
+      </section>
       <section class="grid">
         <div class="unit-span-2">col-2</div>
         <div class="unit-span-4">col-4</div>
