updated to the ABOUT

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ title: It's on Like Donkey Kong
     </section>
 
           </nav>
-          <div>
-            <a href="#" class="scrollup">&#8963;</a>
-          </div>
+
           <section class="grid">
-          <div class="bio unit-span-2">
+          <div class="unit-span-5 bio">
             <ul>
             <li><img src="img/NickAvatar.png"></img></li>
-            <li></li>
+            <li><p>Hi! My name is Nick, I am a former hospitality professional, with more than a decade
+            of experience. I recently followed my passion for technology by enrolling into <strong>The Iron Yard-Orlando</strong>
+            . I am looking forward to gaining new experiences in this amazing field!</p></li>
           </ul>
         </div>
         <section>
@@ -115,6 +115,8 @@ title: It's on Like Donkey Kong
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-
+        <div>
+          <a href="#" class="scrollup">&#8963;</a>
+        </div>
     </body>
 </html>
