--- a/index.html
+++ b/index.html
@@ -81,17 +81,19 @@ title: It's on Like Donkey Kong
           <li class="sizE"><a href="https://www.linkedin.com/in/pope410211"><img src="img/linkedin12.png"></img></a></li>
         </ul>
       </div>
+        </nav>
     </section>
 
-          </nav>
+
 
           <section class="grid">
           <div class="unit-span-5 bio">
-            <ul>
+            <ul class="about">
             <li><img src="img/NickAvatar.png"></img></li>
             <li><p>Hi! My name is Nick, I am a former hospitality professional, with more than a decade
             of experience. I recently followed my passion for technology by enrolling into <strong>The Iron Yard-Orlando</strong>
-            . I am looking forward to gaining new experiences in this amazing field!</p></li>
+            . I'm looking forward to gaining new experiences in this amazing field!</p></li>
+            <li></li>
           </ul>
         </div>
         <section>
