--- a/404.html
+++ b/404.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <h1>Page Not Found</h1>
-    <p>GO AWAY! DOES NOT EXIST!</p>
+    <p>Sorry, but the page you were trying to view does not exist.</p>
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
