added favicon and working on about

--- a/about.html
+++ b/about.html
@@ -1,5 +1,16 @@
 ---
-layout: page
+layout: default
 title: About
 permalink: /about/
 ---
+
+<div class="about">
+
+<div class="img-about">
+  <img src="/assets/images/southpme.png"/>
+</div>
+<section class="about-info">
+<p></p> 
+</section>
+
+</div>
