--- a/about.html
+++ b/about.html
@@ -10,7 +10,19 @@ permalink: /about/
   <img src="/assets/images/southpme.png"/>
 </div>
 <section class="about-info">
-<p></p> 
+<p>   Hi there! Welcome to my website! My name is Nick, dungeon master, game master, and future internet lord (aka aspiring Front End Engineer).
+  I recently graduated from <i><a href="http://theironyard.com/">The Iron Yard -- Orlando</a></i> and looking forward to making the internet
+  a <strike> better place </strike>... well just making the internet.
+</p>
+
+<p> I come from the world of hospitality, and spent 14 years in the industry, working every position imaginable in full service restaurants and resorts to McDonalds, with the last 6 years in management and earning multiple awards.
+But after all of that, it was brought to my attention that I spent all of my free time toying with tech - building computers, learning to code, repairing old NES systems all for fun. That is when I decided with my Fianc&eacute;e Candace
+to really learn to code, and take my past time passions into a career and attended <i>The Iron Yard -- Orlando</i>. I still have a lot to learn in order to become a developer, however in the short amount of time I have been in this industry
+it has become clear that I made the right decision and look forward to a fulfilling career.
+</p>
+
+<p>I one day hope to work for Nintendo of America and/or develop a game for one of their consoles. However in the meantime have a look at my resume, or look for me studying JavaScript.</p>
+
 </section>
 
 </div>
