working on comm page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,26 @@ title: home
 
 <img id="splash"/>
 
+<div class="recent-projects">
+  <h1 id="list-title">Recent Projects</h1>
+  <ul>
+    <li class="sites-img">
+      <label> One Love to Rule Them All</label>
+      <div>
+      <img src="/assets/images/sites/weddingsite.png"/>
+    <p>Static website developed for Candace and Nick's wedding...<a href="#">Read More</a></p>
+  </div></li>
+    <li class="sites-img">
+      <label>Portfolio Site</label>
+      <div><img src="/assets/images/nick-logo.png"/>
+      <p>Static Portfolio website currently being viewed...<a href="#">Read More</a></p>
+    </div></li>
+    <li class="sites-img">
+      <label>Lords of the Round Table &trade;</label>
+      <div><img src="/assets/images/sites/lotrt.png"/>
+      <p>Webapp developed for Game Masters and...<a href="#">Read More</a></p>
+    </div></li>
+  </ul>
+</div>
 
 </div>
