have contact page and resume page

--- a/contact.html
+++ b/contact.html
@@ -4,32 +4,50 @@ title: Contact
 permalink: /contact/
 ---
 <div class="contact-page">
-<h1>Stay In-Touch</h1>
-<section class="contact-me">
-  <ul id="contact-divs">
-    <li class="divs-list">
-<div id="personal">
-  <ul>
-    <li>nicholas pope<br><small>the most hospitable developer</small></li>
-    <li>p: 623-340-2499</li>
-    <li>pope410211@gmail.com</li>
-  </ul>
-</div>
-</li>
-<li class="divs-list">
-<div id="social-link">
-  <ul class="list-icons">
-    <li class="icons"><a href="https://www.linkedin.com/in/pope410211"><img src="/assets/images/icons/linkin.png"/></a></li>
-    <li class="icons"><a href="https://www.github.com/pope410211"><img src="/assets/images/icons/Icon-03.png"/></a></li>
-  </ul>
-<ul class="list-icons">
-    <li class="icons"><a href="https://twitter.com/pope410211"><img src="/assets/images/icons/Icon-02.png"/></a></li>
-    <li class="icons"><a href="mailto:pope410211@gmail.com?subject=Hey There!"><img src="/assets/images/icons/mail.png"/></a></li>
-  </ul>
-</div>
-</li>
-</ul>
-
-
-</section>
+  <h1>Stay In-Touch</h1>
+  <section class="contact-me">
+    <ul id="contact-divs">
+      <li class="divs-list">
+        <div id="personal">
+          <ul>
+            <li>nicholas pope
+              <br>
+              <small>the most hospitable developer</small>
+            </li>
+            <li>p: 623-340-2499</li>
+            <li>pope410211@gmail.com</li>
+          </ul>
+        </div>
+      </li>
+      <li class="divs-list">
+        <div id="social-link">
+          <ul class="list-icons">
+            <li class="icons">
+              <a href="https://www.linkedin.com/in/pope410211">
+                <img src="/assets/images/icons/linkin.png" />
+              </a>
+            </li>
+            <li class="icons">
+              <a href="https://www.github.com/pope410211">
+                <img src="/assets/images/icons/Icon-03.png" />
+              </a>
+            </li>
+          </ul>
+          <ul class="list-icons">
+            <li class="icons">
+              <a href="https://twitter.com/pope410211">
+                <img src="/assets/images/icons/Icon-02.png" />
+              </a>
+            </li>
+            <li class="icons">
+              <a href="mailto:pope410211@gmail.com?subject=Hey There!">
+                <img src="/assets/images/icons/mail.png"/>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="divs-list">
+    </ul>
+  </section>
 </div>
