started portfolio piece

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: home
     <li class="sites-img">
       <label>Lords of the Round Table &trade;</label>
       <div><img src="/assets/images/sites/lotrt.png"/>
-      <p>Webapp developed for Game Masters and...<a href="#">Read More</a></p>
+      <p>Webapp developed for Game Masters and...<a href="/portfolio#lotrt">Read More</a></p>
     </div></li>
   </ul>
 </div>
