started layout for portfolio page and have a 404 page...not sure if it works though

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@ permalink: /portfolio/
       <dl>
       <dt>Lords of the Round Table</dt>
       <dd>A webapp created for Game Masters, and players alike. The purpose ....</dd>
+      <dd><a href="#">LINK</a></dd>
     </dl>
   <table>
     <tr>
