--- a/portfolio.html
+++ b/portfolio.html
@@ -3,14 +3,24 @@ layout: default
 title: Portfolio
 permalink: /portfolio/
 ---
-<section>
+<section class="Portfolio-div">
   <ul>
     <li>
-      <div>
+      <div id="port-img">
+        <ul>
+          <li><img src="http://placehold.it/175x100"/></li>
+          <li><img src="http://placehold.it/175x100"/></li>
+          <li><img src="http://placehold.it/175x100"/></li>
+        </ul>
+        <ul>
+          <li><img src="http://placehold.it/175x100"/></li>
+          <li><img src="http://placehold.it/175x100"/></li>
+          <li><img src="http://placehold.it/175x100"/></li>
+        </ul>
       </div>
     </li>
     <li>
-      <div>
+      <div id="port-info">
       <dl>
       <dt>Lords of the Round Table</dt>
       <dd>A webapp created for Game Masters, and players alike. The purpose ....</dd>
