--- a/portfolio.html
+++ b/portfolio.html
@@ -3,39 +3,111 @@ layout: default
 title: Portfolio
 permalink: /portfolio/
 ---
-<section class="Portfolio-div">
-  <ul>
-    <li>
+<div class="portfolio">
+  <div id="wip">
+    <a href="/wip"><button id="WIP-BTN">Work in Progress</button></a>
+  </div>
+<section class="portfolio-div" id="lotrt">
+  <ul class="port-ul">
+    <li class="port-li">
       <div id="port-img">
-        <ul>
-          <li><img src="http://placehold.it/175x100"/></li>
-          <li><img src="http://placehold.it/175x100"/></li>
-          <li><img src="http://placehold.it/175x100"/></li>
-        </ul>
-        <ul>
-          <li><img src="http://placehold.it/175x100"/></li>
-          <li><img src="http://placehold.it/175x100"/></li>
-          <li><img src="http://placehold.it/175x100"/></li>
-        </ul>
+      <table>
+        <tr>
+          <td><img src="/assets/images/sites/lotrt/lotrt.png"/></td>
+          <td><img src="/assets/images/sites/lotrt/lotrt-home.png"/></td>
+        </tr>
+        <tr>
+          <td><img src="/assets/images/sites/lotrt/lotrt-list.png"/></td>
+          <td><img src="/assets/images/sites/lotrt/lotrt-game.png"/></td>
+        </tr>
+        </table>
       </div>
     </li>
-    <li>
+    <li class="port-li">
       <div id="port-info">
       <dl>
       <dt>Lords of the Round Table</dt>
-      <dd>A webapp created for Game Masters, and players alike. The purpose ....</dd>
-      <dd><a href="#">LINK</a></dd>
+      <dd>Webapp developed for Game Masters and Players alike. I created the app to solve my problem of finding
+        or looking for a group. I used Facebook as my login, however until it is approved, no one will be able to login and
+        use the app as it is intended.
+     </dd>
     </dl>
   <table>
-    <tr>
-  <th>Tech Stack:</th>
+  <tr>
+  <th> View:</th>
 </tr>
+  <tr>
+    <td><a href="https://github.com/pope410211/LordsoftheRoundTable"><button class="port-btn">Code on GitHub</button></a></td>
+  </tr>
+</table>
+<dl>
+<dt>Tech Stack:</dt>
+<dd><table>
 <tr>
-  <td>Angularjs</td>
-  <td>Gulp</td>
+<td>HTML5</td>
+<td>BootStrap</td>
+<td>Angularjs</td>
+<td>dirPaginate</td>
+<td>Firebase</td>
+<td>Sass</td>
+<td>Gulp</td>
 </tr>
 </table>
+</dd>
+</dl>
 </div>
     </li>
   </ul>
 </section>
+<section class="portfolio-div">
+  <ul class="port-ul">
+    <li class="port-li">
+      <div id="port-img">
+      <table>
+        <tr>
+          <td><img src="/assets/images/sites/lotrt.png"/></td>
+          <td><img src="#"/></td>
+        </tr>
+        <tr>
+          <td><img src="#"/></td>
+          <td><img src="#"/></td>
+        </tr>
+        </table
+      </div>
+    </li>
+    <li class="port-li">
+      <div id="port-info">
+      <dl>
+      <dt>Portfolio</dt>
+      <dd>Created to showcase my current abilities.</dd>
+    </dl>
+  <table>
+  <tr>
+  <th> View:</th>
+</tr>
+  <tr>
+    <td><a href="https://github.com/pope410211/pope410211.github.io"><button class="port-btn" >Code on GitHub</button></a></td>
+  </tr>
+</table>
+<dl>
+<dt>Tech Stack:</dt>
+<dd><table>
+<tr>
+<td>HTML5</td>
+<td>Jekyll</td>
+</tr>
+</table>
+</dd>
+</dl>
+</div>
+    </li>
+  </ul>
+</section>
+
+
+
+
+
+
+
+</div>
