--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@ title: Resume
 permalink: /resume/
 ---
 <section class="resume-p">
-<a href="/assets/docs/npope_resume.pdf" download="npope_resume.pdf"><img src="/assets/images/resume_img.png"/></a>
-</aside>
+<img id="resume" src="/assets/images/resume_img.png"/>
+<a href="/assets/docs/npope_resume.pdf" download="npope_resume.pdf"><img src="/assets/images/resumedlbtn.png"/></>
+
 </section>
