finishing port - about to work-on responsiveness

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@ permalink: /portfolio/
 ---
 <div class="portfolio">
   <div id="wip">
-    <a href="/wip"><button id="WIP-BTN">Work in Progress</button></a>
+    <a href="/wip"><button id="WIP-BTN">Works in Progress</button></a>
   </div>
 <section class="portfolio-div" id="lotrt">
   <ul class="port-ul">
@@ -59,18 +59,18 @@ permalink: /portfolio/
     </li>
   </ul>
 </section>
-<section class="portfolio-div">
+<section class="portfolio-div" id="port">
   <ul class="port-ul">
     <li class="port-li">
       <div id="port-img">
       <table>
         <tr>
-          <td><img src="/assets/images/sites/lotrt.png"/></td>
+          <td><img src="/assets/images/nick-logo.png"/></td>
           <td><img src="#"/></td>
         </tr>
         <tr>
-          <td><img src="#"/></td>
-          <td><img src="#"/></td>
+          <td><img src="/assets/images/sites/portfolio/port-about.png"/></td>
+          <td><img src="/assets/images/sites/portfolio/port-resume.png"/></td>
         </tr>
         </table
       </div>
@@ -95,6 +95,58 @@ permalink: /portfolio/
 <tr>
 <td>HTML5</td>
 <td>Jekyll</td>
+</tr>
+</table>
+</dd>
+</dl>
+</div>
+    </li>
+  </ul>
+</section>
+<section class="portfolio-div">
+  <ul class="port-ul">
+    <li class="port-li">
+      <div id="port-img">
+      <table>
+        <tr>
+          <td><img src="/assets/images/sites/lotrt/lotrt.png"/></td>
+          <td><img src="/assets/images/sites/lotrt/lotrt-home.png"/></td>
+        </tr>
+        <tr>
+          <td><img src="/assets/images/sites/lotrt/lotrt-list.png"/></td>
+          <td><img src="/assets/images/sites/lotrt/lotrt-game.png"/></td>
+        </tr>
+        </table>
+      </div>
+    </li>
+    <li class="port-li">
+      <div id="port-info">
+      <dl>
+      <dt>Lords of the Round Table</dt>
+      <dd>Webapp developed for Game Masters and Players alike. I created the app to solve my problem of finding
+        or looking for a group. I used Facebook as my login, however until it is approved, no one will be able to login and
+        use the app as it is intended.
+     </dd>
+    </dl>
+  <table>
+  <tr>
+  <th> View:</th>
+</tr>
+  <tr>
+    <td><a href="https://github.com/pope410211/LordsoftheRoundTable"><button class="port-btn">Code on GitHub</button></a></td>
+  </tr>
+</table>
+<dl>
+<dt>Tech Stack:</dt>
+<dd><table>
+<tr>
+<td>HTML5</td>
+<td>BootStrap</td>
+<td>Angularjs</td>
+<td>dirPaginate</td>
+<td>Firebase</td>
+<td>Sass</td>
+<td>Gulp</td>
 </tr>
 </table>
 </dd>
