--- a/wip.html
+++ b/wip.html
@@ -56,13 +56,13 @@ permalink: /wip/
     </li>
   </ul>
 </section>
-<section class="portfolio-div">
+<section class="portfolio-div" id="wedding">
   <ul class="port-ul">
     <li class="port-li">
       <div id="port-img">
       <table>
         <tr>
-          <td><img class="sngl-img" src="/assets/images/sites/weddingsite.png"/></td>
+          <td><img class="sngl-img" src="/assets/images/sites/wedding/weddingsite.png"/></td>
         </tr>
         </table
       </div>
