portfolio going live

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@ permalink: /portfolio/
       <table>
         <tr>
           <td><img src="/assets/images/nick-logo.png"/></td>
-          <td><img src="#"/></td>
+          <td><img src="/assets/images/sites/portfolio/port-home.png"/></td>
         </tr>
         <tr>
           <td><img src="/assets/images/sites/portfolio/port-about.png"/></td>
@@ -109,12 +109,12 @@ permalink: /portfolio/
       <div id="port-img">
       <table>
         <tr>
-          <td><img src="/assets/images/sites/lotrt/lotrt.png"/></td>
-          <td><img src="/assets/images/sites/lotrt/lotrt-home.png"/></td>
+          <td><img src="/assets/images/sites/tiy/NA.png"/></td>
+          <td><img src="/assets/images/sites/tiy/NA-open.png"/></td>
         </tr>
         <tr>
-          <td><img src="/assets/images/sites/lotrt/lotrt-list.png"/></td>
-          <td><img src="/assets/images/sites/lotrt/lotrt-game.png"/></td>
+          <td><img src="/assets/images/sites/tiy/fwt.png"/></td>
+          <td><img src="/assets/images/sites/tiy/fwt-resp.png"/></td>
         </tr>
         </table>
       </div>
@@ -122,10 +122,9 @@ permalink: /portfolio/
     <li class="port-li">
       <div id="port-info">
       <dl>
-      <dt>Lords of the Round Table</dt>
-      <dd>Webapp developed for Game Masters and Players alike. I created the app to solve my problem of finding
-        or looking for a group. I used Facebook as my login, however until it is approved, no one will be able to login and
-        use the app as it is intended.
+      <dt>TIY-Assignments</dt>
+      <dd>Two assignments completed in the first few weeks of The Iron Yard based off the Typmanus Blue Prints.
+         First up is The Nested Accordion. Then we have Responsive Full Width Tabs.
      </dd>
     </dl>
   <table>
@@ -133,7 +132,7 @@ permalink: /portfolio/
   <th> View:</th>
 </tr>
   <tr>
-    <td><a href="https://github.com/pope410211/LordsoftheRoundTable"><button class="port-btn">Code on GitHub</button></a></td>
+    <td><a href="https://github.com/pope410211/tiy-assignments"><button class="port-btn">Code on GitHub</button></a></td>
   </tr>
 </table>
 <dl>
@@ -141,12 +140,8 @@ permalink: /portfolio/
 <dd><table>
 <tr>
 <td>HTML5</td>
-<td>BootStrap</td>
-<td>Angularjs</td>
-<td>dirPaginate</td>
-<td>Firebase</td>
-<td>Sass</td>
-<td>Gulp</td>
+<td>jQuery</td>
+<td>Browser-sync</td>
 </tr>
 </table>
 </dd>
