--- a/wip.html
+++ b/wip.html
@@ -21,7 +21,7 @@ permalink: /wip/
       <div id="port-info">
       <dl>
       <dt>CardCore Games&reg;&trade; - <i>WIP</i></dt>
-      <dd>I am building and part desigining the website for CardCore Games&reg;&trade;.</dd>
+      <dd>I am building and part desigining the website for CardCore Games&reg;&trade;.Still in the Planning Stages</dd>
     </dl>
   <table>
     <tr>
