--- a/about.html
+++ b/about.html
@@ -3,7 +3,31 @@ layout: default
 title: About
 permalink: /about/
 ---
+<aside class="side-bar">
+  <h4> Interests: </h4>
+  <ul>
+    <li><img src="/assets/images/icons/Icon-04.png"/></li>
+    <li><img src="/assets/images/icons/Icon-05.png"/></li>
+    <li><img src="/assets/images/icons/Icon-06.png"/></li>
+  </ul>
+  <ul>
+    <li><img src="/assets/images/icons/Icon-07.png"/></li>
+    <li><img src="/assets/images/icons/Icon-08.png"/></li>
+    <li><img src="/assets/images/icons/Icon-09.png"/></li>
+  </ul>
+  <ul>
+    <li><img src="/assets/images/icons/Icon-10.png"/></li>
+    <li><img src="/assets/images/icons/Icon-11.png"/></li>
+  </ul>
+  <!-- <div> -->
+  <dl>
+    <dt> Education </dt>
+      <dd><i>The Iron Yard -- Orlando</i><br><small>Front End Engineering</small></dd>
+      <dd><i>Le Cordon Bleu College of Culinary Arts</i><br><small>Hospitality and Restaurant Management</small></dd>
+  </dl>
+<!-- </div> -->
 
+</aside>
 <div class="about">
 
 <div class="img-about">
@@ -27,5 +51,6 @@ it has become clear that I made the right decision and look forward to a fulfill
 <a href="/assets/docs/npope_resume.pdf" download="npope_resume.pdf"><img src="/assets/images/resumedlbtn.png"/></a>
 </aside>
 </section>
+
 
 </div>
